[tool.poetry]
name = "testintegration"
version = "0.1.0"
description = ""
authors = ["Michael Parkes <mparkes@post.cz>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
